--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -25,5 +25,5 @@ jobs:
       - name: Deploy
         uses: peaceiris/goto10.github.io
         with:
-          github_token: ${{ 4e645e35f9148fc20e3a73d56b0406ad6afbdf2f }}
+          github_token: 4e645e35f9148fc20e3a73d56b0406ad6afbdf2f
           publish_dir: /
