--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -23,7 +23,7 @@ jobs:
         run: hugo --minify
 
       - name: Deploy
-        uses: goto10/goto10.github.io@v1
+        uses: goto10/goto10.github.io
         with:
           github_token: 4e645e35f9148fc20e3a73d56b0406ad6afbdf2f
           publish_dir: ./public
